Finalizado a feature de risk

--- a/app/views/managment_risks/_form.html.erb
+++ b/app/views/managment_risks/_form.html.erb
@@ -64,9 +64,9 @@
 
   <div class="field">
   <br />
-    <b><%= f.label :probabitity %></b>
+    <b><%= f.label :probability %></b>
     <br />
-      <%= f.select :probabitity, options_for_select({'Muito alta' => 1 , 'Alta' => 2 , 'Média' => 3, 'Baixa' => 4, 'Muito baixa' => 5 }),{:prompt => 'Selecione a probabilidade do risco' } %>
+      <%= f.select :probability, options_for_select({'Muito alta' => 1 , 'Alta' => 2 , 'Média' => 3, 'Baixa' => 4, 'Muito baixa' => 5 }),{:prompt => 'Selecione a probabilidade do risco' } %>
 
   </div>
 
