ajuste para view de user

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,9 @@
 
 <div class="container">
   <% if current_user.group != 'admin' && current_user.group != 'coordenador' %>
-    <h1>Projetos <%= image_tag("gerenciamento-de-projetos.png") %></h1>
+    <br />
+    <br />
+    <h1>Projetos</h1>
     <hr>
     <p></p>
   
