--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -528,10 +528,13 @@ and (-webkit-min-device-pixel-ratio: 1){
 
 /* Portrait */
 @media screen 
-  and (device-width: 320px) 
-  and (device-height: 640px) 
+  and (max-width: 320px) 
+  and (max-height: 640px) 
   and (-webkit-device-pixel-ratio: 2) 
   and (orientation: portrait) { 
+    img#logo{
+      align-items: center;
+    }
     div#box-center {  
       margin-left: 47px;
     }
@@ -543,7 +546,7 @@ and (-webkit-min-device-pixel-ratio: 1){
   and (device-height: 653px) 
   and (orientation: landscape) {
     div#box-center {  
-      top: -26px;
+      top: -56px;
       margin-left: 87px;
     }
 }
@@ -784,12 +787,7 @@ and (-webkit-min-device-pixel-ratio: 1){
 /* ----------- iPhone 6, 6S, 7 and 8 ----------- */
 
 /* Portrait and Landscape */
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 667px) 
-  and (-webkit-min-device-pixel-ratio: 2) { 
-
-}
+  
 
 /* Landscape */
 @media only screen 
@@ -1075,8 +1073,8 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 
     div#box-center {
-      margin-top: -15px;
-      margin-left: -15px;
+      margin-top: 12px;
+      margin-left: 0px;
       margin-bottom: 40px;
     }
     input#user_email{
