--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -111,7 +111,7 @@
     <button class="card" onclick="window.location.href='<%= scrumboard_path(@project.id) %>'" id="scrumboards">   
             <%= image_tag("kanban_icon.png") %>
             <div class="description">
-              Acesse o scrumboard do projeto <%= @project.name %>.
+              Scrumboard do projeto <%= @project.name %>.
              </div>
            <br />
     </button>
